--- a/code_lou_todo/templates/index.html
+++ b/code_lou_todo/templates/index.html
@@ -1,5 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body_content %}
-<h1>welcome!</h1>
+<div class="home-page-wrap">
+  <h1>Generic Todo App!</h1>
+  <h4>Created by: Jeremiah Bushau<br>with Django, a Python web framework</h4>
+
+  {% include 'nav.html' %}
+</div>
 {% endblock %}
