--- a/code_lou_todo/todos/templates/todos/todo_update_form.html
+++ b/code_lou_todo/todos/templates/todos/todo_update_form.html
@@ -2,10 +2,20 @@
 
 {% block title_tag %}Edit {{ todo.title }}{% endblock %}
 
+{% block nav_content %}
+{% include 'nav.html' %}
+{% endblock %}
+
 {% block body_content %}
-<form method="POST" id="todoForm">
-  {% csrf_token %}
-  {{ form }}
-  <input type="submit" value="update">
-</form>
+<div class="form-wrap">
+  <form method="POST" id="todoForm">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="update">
+  </form>
+</div>
+{% endblock %}
+
+{% block footer_content %}
+{% include 'footer.html' %}
 {% endblock %}
