--- a/code_lou_todo/todos/templates/todos/todo_list.html
+++ b/code_lou_todo/todos/templates/todos/todo_list.html
@@ -6,23 +6,26 @@
 
 {% block body_content %}
 <div class="todo-list">
-  <h1 class="todo-label">ACTIVE</h1>
-  {% for todo in todo_list %}
-  {% if not todo.is_complete %}
-
-  <div class="todo-list-item">
-    <h1><a href="{% url 'todos:todo_detail' pk=todo.pk %}">{{ todo.title }}</a></h1>
+  {% if active_todos %}
+  <div class="active-todos">
+    <h1 class="todo-label">ACTIVE</h1>
+    {% for todo in active_todos %}
+    <div class="todo-list-item">
+      <h1><a href="{% url 'todos:todo_detail' pk=todo.pk %}">{{ todo.title }}</a></h1>
+    </div>
+    {% endfor %}
   </div>
   {% endif %}
-  {% endfor %}
-  <h1 class="todo-label">COMPLETE</h1>
-  {% for todo in todo_list %}
-  {% if todo.is_complete %}
-  <div class="todo-list-item complete">
-    <h1><a href="{% url 'todos:todo_detail' pk=todo.pk %}">{{ todo.title }}</a></h1>
+  {% if complete_todos %}
+  <div class="complete-todos">
+    <h1 class="todo-label">COMPLETE</h1>
+    {% for todo in complete_todos %}
+    <div class="todo-list-item complete">
+      <h1><a href="{% url 'todos:todo_detail' pk=todo.pk %}">{{ todo.title }}</a></h1>
+    </div>
+    {% endfor %}
   </div>
   {% endif %}
-  {% endfor %}
 </div>
 {% endblock %}
 
