--- a/code_lou_todo/assets/css/code_lou_todo.css
+++ b/code_lou_todo/assets/css/code_lou_todo.css
@@ -49,6 +49,12 @@ footer {
   justify-content: center;
 }
 
+nav {
+  background: url('../imgs/goma_chan.png') no-repeat, #555;
+  background-position: 105%;
+  background-size: 5em;
+}
+
 footer {
   color: whitesmoke;
   text-align: center;
@@ -81,6 +87,7 @@ input[type="text"], textarea {
   flex-direction: column;
   margin: auto;
   width:95%;
+  max-width: 1000px;
   min-height: 80%;
   justify-content: flex-start;
 }
@@ -176,6 +183,11 @@ input[type='submit'] {
   form{
     margin: auto;
   }
+
+  nav {
+  background-position: 95%;
+  background-size: 10em;
+}
 
   .todo-list {
     width: 75%;
