--- a/code_lou_todo/todos/templates/todos/todo_detail.html
+++ b/code_lou_todo/todos/templates/todos/todo_detail.html
@@ -26,7 +26,7 @@
   </div>
 
   <small>
-    {{ todo.created_at }}
+    Posted {{ todo.created_at|naturaltime }}
   </small>
 
   <div class="todo-content">
