--- a/code_lou_todo/todos/templates/todos/todo_detail.html
+++ b/code_lou_todo/todos/templates/todos/todo_detail.html
@@ -22,6 +22,9 @@
       {% if after %}
         <a href="{% url 'todos:todo_detail' pk=after.0.pk %}">Next ></a>
       {% endif %}
+      {% if not after %}
+      <a href="" class="link-placeholder"></a>
+      {% endif %}
     </div>
   </div>
 
