--- a/code_lou_todo/assets/css/code_lou_todo.css
+++ b/code_lou_todo/assets/css/code_lou_todo.css
@@ -1,12 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 
+
+/*
+  General/base styles
+*/
+
 html,
 body {
   height: 100%;
   width: 100%;
   margin: 0;
-  background: #999;
+  background: #898989;
   font-family: 'Roboto', sans-serif;
+}
+
+nav,
+footer,
+form,
+form label,
+.home-page-wrap,
+.todo-detail,
+.todo-list,
+.todo-nav,
+.todo-nav-links,
+.todo-content,
+.todo-ops {
+  display: flex;
 }
 
 pre {
@@ -16,27 +35,18 @@ pre {
 }
 
 form {
-  display: flex;
   flex-direction: column;
   max-width: 31em;
   margin: 0.5em;
 }
-form label {
-  display: flex;
-}
+
 .form-wrap {
   min-height: 80%;
   margin: 0.5em;
 }
 
-nav,
-footer,
-.todo-detail,
-.todo-list,
-.todo-nav,
-.todo-nav-links,
-.todo-ops {
-  display: flex;
+label {
+  font-size: 1.5em;
 }
 
 nav,
@@ -50,7 +60,9 @@ footer {
 }
 
 nav {
-  background: url('../imgs/goma_chan.png') no-repeat, #555;
+  justify-content: flex-start;
+  min-height: 50px;
+  background: url('../imgs/goma_chan.png') no-repeat, #444;
   background-position: 100% 90%;
   background-size: 5em;
 }
@@ -60,18 +72,51 @@ footer {
   text-align: center;
 }
 
-label {
-  font-size: 1.5em;
+/*
+  General links and input styles
+*/
+
+a {
+  text-decoration: none;
 }
 
-input[type="text"], textarea {
+input[type="text"],
+textarea {
   padding: 0.5em;
   width: auto;
   background: whitesmoke;
 }
 
-.home-page-wrap {
+nav a,
+.todo-nav a,
+.todo-ops a,
+input[type='submit'] {
   display: flex;
+  color: whitesmoke;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  background: #333;
+  height: 1.5em;
+  width: 7em;
+  margin: 0 0.5em 0 0;
+  border: none;
+}
+
+nav > a {
+  margin-left: 0.5em;
+}
+
+input[type='submit'] {
+  margin-top: 0.5em;
+}
+
+/*
+  landing page styles
+*/
+
+.home-page-wrap {
   flex-direction: column;
   width: 100%;
   height: 100%;
@@ -84,10 +129,14 @@ input[type="text"], textarea {
   text-align: center;
   font-weight: normal;
 }
-
-.welcome-nav {
+.home-page-nav {
   background: #555;
+  justify-content: center;
 }
+
+/*
+  Todo list styles
+*/
 
 .todo-list {
   flex-direction: column;
@@ -96,6 +145,11 @@ input[type="text"], textarea {
   max-width: 1000px;
   min-height: 80%;
   justify-content: flex-start;
+}
+
+.todo-label {
+  text-decoration: underline;
+  color: #333;
 }
 
 .todo-list-item {
@@ -116,17 +170,29 @@ input[type="text"], textarea {
 .todo-list-item a {
   background: #ddd;
   padding: 0.2em;
-  text-decoration: none;
   border-bottom: 2px solid #555;
 }
 
-.todo-label {
-  text-decoration: underline;
-  color: #333;
+/*
+  Todo detail styles
+*/
+
+.todo-detail {
+  padding: 0.5em;
+  flex-direction: column;
+  min-height: calc(80% - 1em) ;
+}
+
+.todo-content {
+  flex-direction: column;
+  max-width: 97%;
+  background: #ddd;
+  padding: 0.5em;
+  margin: 0.5em 0;
+  border-bottom: 2px solid #555
 }
 
 .todo-nav {
-  display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
@@ -136,42 +202,10 @@ input[type="text"], textarea {
 .todo-nav-links {
   margin: 0.5em 0;
 }
-nav a,
-.todo-nav a,
-.todo-ops a,
-input[type='submit'] {
-  display: flex;
-  color: whitesmoke;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  text-decoration: none;
-  background: #333;
-  height: 1.5em;
-  width: 7em;
-  margin: 0 0.5em 0 0;
-  border: none;
-}
 
-input[type='submit'] {
-  margin: 0.5em 0;
-}
-
-.todo-detail {
-  padding: 0.5em;
-  flex-direction: column;
-  min-height: calc(80% - 1em) ;
-}
-
-.todo-content {
-  display: flex;
-  flex-direction: column;
-  max-width: 97%;
-  background: #ddd;
-  padding: 0.5em;
-  margin: 0.5em 0;
-  border-bottom: 2px solid #555
-}
+/*
+  extras/typo
+*/
 
 .modified-display {
   padding: 0.2em;
@@ -185,6 +219,14 @@ input[type='submit'] {
   text-decoration: line-through;
 }
 
+.link-placeholder {
+  visibility: hidden;
+}
+
+/*
+  media queries
+*/
+
 @media (min-width: 600px) {
   form{
     margin: auto;
@@ -193,6 +235,7 @@ input[type='submit'] {
   nav {
   background-position: 95%;
   background-size: 10em;
+  justify-content: center;
 }
 
   .todo-list {
@@ -212,7 +255,6 @@ input[type='submit'] {
     align-items: center;
     justify-content: space-between;
   }
-
   .todo-nav-links a {
     padding-left: 0;
   }
